fix AdditionalInfoView next button alignment

--- a/client/components/AdditionalInfoView/AdditionalInfoView/additional-info-view.scss
+++ b/client/components/AdditionalInfoView/AdditionalInfoView/additional-info-view.scss
@@ -4,7 +4,8 @@
 }
 
 .next-button-container {
-
+    text-align: center;
+    margin-bottom: 3em;
 }
 
 .userProgress {
