--- a/client/components/CustomOrderView/MenuSection/menu-section.scss
+++ b/client/components/CustomOrderView/MenuSection/menu-section.scss
@@ -27,7 +27,7 @@
     }
 }
 
-@media only screen and (min-width: 1120px) {
+@media only screen and (min-width: 1160px) {
     .menu-section {
         display: inline-block;
 
